--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,5 +23,5 @@ jobs:
       # Xcode build
       # https://developer.apple.com/library/archive/technotes/tn2339/_index.html
       - name: xcode build
-        run: xcodebuild -workspace tbk.xcworkspace -scheme ${{ env.SCHEME }} build -configuration Release CODE_SIGNING_REQUIRED=no
+        run: xcodebuild -workspace tbk.xcworkspace -scheme ${{ env.SCHEME }} build -configuration Release CODE_SIGNING_REQUIRED=no CODE_SIGNING_ALLOWED="NO"
 
