--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ build
 Pods
 tbk.xcodeproj/xcuserdata/
 tbk.xcworkspace/xcuserdata/
+tbk.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/
 TaoBaoKe.iOS.iml
 
